{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 270,
  "lineage": "b99d7807-2388-c34e-0125-beffa6165824",
  "resources": [
    {
      "module": "module.ECS-Cluster",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "module.ECS-Cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872263966368:internet-gateway/igw-0268c71658f0144f8",
            "id": "igw-0268c71658f0144f8",
            "owner_id": "872263966368",
            "vpc_id": "vpc-08f06a6f6bd7de278"
          },
          "dependencies": [
            "module.ECS-Cluster.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ECS-Cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "module.ECS-Cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872263966368:route-table/rtb-0d2ebd6b8bfd1682a",
            "id": "rtb-0d2ebd6b8bfd1682a",
            "owner_id": "872263966368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0268c71658f0144f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f06a6f6bd7de278"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ECS-Cluster.aws_internet_gateway.internet_gateway",
            "module.ECS-Cluster.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ECS-Cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "module.ECS-Cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0393e58a6fc1bfadb",
            "route_table_id": "rtb-0d2ebd6b8bfd1682a",
            "subnet_id": "subnet-0f1d0f8c5044cf42a"
          },
          "dependencies": [
            "module.ECS-Cluster.aws_internet_gateway.internet_gateway",
            "module.ECS-Cluster.aws_route_table.public-route",
            "module.ECS-Cluster.aws_subnet.subnet",
            "module.ECS-Cluster.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ECS-Cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "module.ECS-Cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872263966368:security-group/sg-0cca4298f8b9c1e23",
            "description": "Security Group for EC2 Cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cca4298f8b9c1e23",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "security_group",
            "name_prefix": "",
            "owner_id": "872263966368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Group for EC2 Cluster"
            },
            "tags_all": {
              "Name": "Security Group for EC2 Cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f06a6f6bd7de278"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ECS-Cluster.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ECS-Cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "module.ECS-Cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872263966368:subnet/subnet-0f1d0f8c5044cf42a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1d0f8c5044cf42a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872263966368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08f06a6f6bd7de278"
          },
          "dependencies": [
            "module.ECS-Cluster.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ECS-Cluster",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.ECS-Cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872263966368:vpc/vpc-08f06a6f6bd7de278",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0cb082f27d197ccb8",
            "default_route_table_id": "rtb-0d81e74e098c20865",
            "default_security_group_id": "sg-067f36bcf5aac2fae",
            "dhcp_options_id": "dopt-07a82311e39db9ba6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f06a6f6bd7de278",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d81e74e098c20865",
            "owner_id": "872263966368",
            "tags": {
              "Name": "ECS-VPC"
            },
            "tags_all": {
              "Name": "ECS-VPC"
            }
          }
        }
      ]
    }
  ]
}